v 1.4.2
	#211 - Bug if use where clause
	#197 - Properly sanitize filenames for uploads
	#237 - Set Timepicker to 24 hour format
	Add a new method unset_view that is just an alias to unset_read method
	Multiple search fields for flexibility for future themes.
	Add 2 new functions:
		- unset_read_fields
		- set_read_fields
v 1.4.1
	#231 - Read page not showing relations.
	#233 - File upload uniqueid not unique.
v 1.4.0
	#170 - Problem with more than one date inputs at the dialog.
	#148 - New theme twitter-bootstrap
	#150 - Optimizing the SELECT statement for counting rows.
	#144 - Unique fields as new functionallity for unique fields in the database.
	#129 - Small bug uploading images.
	#142 - Extras doesn't work properly when the field doesn't exist in the database
	#158 - New method name set_crud_url_path. This method is useful when the path is not specified correctly.
	#163 - Custom field type label for true_false. Like hidden, enum and set.
	Noty Jquery Plugin to load when you delete a record.
	Upgrading Jquery to Jquery 1.10.2
	Multiple grids in one page.
	New language: Catalan.
	Add "view" as new action.
	Small bug fixes:
		- #165 - add_action "url_has_http" issue
		- #166 - Improved file upload error handling
		- #167 - add_action method in Twitter_Bootstrap theme, doesn't update the dropdown properly
v 1.3.3
	#102 - Unsigned field type bug.
	#103 - Multiple columns search filtering at datatables.
	#113 - Relation n_n missing when unset field.
	Adding languages: Bengali, Slovak, Korean.
	Stop supporting Codeigniter version 2.1.1 with ugly workarounds.
	Use fancybox for previewing the thumbnails at the list page.
	Transliteration characters for uploaded files.
	Updating jQuery Plugins and third party addons:
		- Updating jQuery to version 1.8.2
		- jQuery UI Library to v1.9.0.
		- Timepicker Addon for jQuery UI Datepicker to v1.0.5.
		- jQuery UI Multiselect and adding localization files for it.
		- jQuery Numeric plugin to v1.3.1.